--- a/src/components/Admin/PhoneInput/PhoneInput.module.scss
+++ b/src/components/Admin/PhoneInput/PhoneInput.module.scss
@@ -4,6 +4,17 @@
 
 .phoneInputs {
   margin-bottom: 1%;
+  position: relative;
+
+  & span {
+    position: absolute;
+    top: 35%;
+    left: 0;
+    height: 18px;
+    width: 100%;
+    font-size: 14px;
+    color: #ec5990;
+  }
 }
 
 .phoneInputsTitle {
