--- a/src/pages/AdminContactsPage/AdminContactsPage.module.scss
+++ b/src/pages/AdminContactsPage/AdminContactsPage.module.scss
@@ -8,10 +8,14 @@
   margin: 0 auto;
 }
 
+.contentWrapper {
+  width: 84%;
+}
+
 .contacts_content {
   display: flex;
   justify-content: space-around;
-  width: 84%;
+  width: 100%;
 }
 
 .content_fileInput {
@@ -40,7 +44,7 @@
 }
 
 .contactsSocials {
-  width: 84%;
+  width: 100%;
 }
 
 .socialsTitleWrapper {
