--- a/src/pages/AdminInstitutionPage/AdminInstitutionPage.module.scss
+++ b/src/pages/AdminInstitutionPage/AdminInstitutionPage.module.scss
@@ -41,6 +41,7 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   width: 84%;
+  margin-bottom: 90px;
   margin-left: 6.5%;
 }
 
@@ -63,13 +64,61 @@
 .intitutionRatingWrapper {
   height: 275px;
   width: 84%;
-  background-color: white;
+  background-color: #000;
   margin-left: 6.5%;
   margin-bottom: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   & canvas {
-    height: 100% !important;
-    width: 100%;
+    height: 60px !important;
+    width: 100% !important;
+    margin-bottom: 20px;
+  }
+}
+
+.ratingTitleWrapper {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+
+.ratingTitleStar {
+  color: white;
+
+  & h3 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    margin: 0 0 15px 5px;
+  }
+}
+
+.ratingTitle {
+  color: white;
+
+  & h3 {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    margin: 0;
+  }
+}
+
+.ratingDate {
+  height: 25px;
+  display: flex;
+  justify-content: space-between;
+
+  & h5 {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 22px;
+    margin: 0;
+    color: white;
   }
 }
 
@@ -86,7 +135,7 @@
 }
 
 .descrInputTitle {
-  color: #FFB03B;
+  color: #ffb03b;
   font-size: 26px;
   font-weight: 600;
 }
