--- a/src/components/ui/order-for-pages/OrderForPages.module.scss
+++ b/src/components/ui/order-for-pages/OrderForPages.module.scss
@@ -37,7 +37,7 @@
     padding: 150px 7% 0 0;
     @media (max-width: 768px) {
       width: 100%;
-      padding: 0 0 0 0;
+      padding: 0;
     }
 
     & > h4 {
@@ -80,12 +80,11 @@
       border: none;
       cursor: pointer;
       transition: all .5s;
+      padding: 17px 22px;
       @media (max-width: 768px) {
         width: 163px;
         height: 52px;
       }
-
     }
   }
-
 }
