--- a/src/components/MainPage/BarSlider/BarSlider.css
+++ b/src/components/MainPage/BarSlider/BarSlider.css
@@ -38,16 +38,16 @@
 
 
 @media screen and (max-width: 1025px){
-    .mySwiper {
+    .ourSwiper {
     }
 
-    .swiper {
+    .ourSwiper .swiper {
         width: 100%;
         padding-top: 50px;
         padding-bottom: 50px;
     }
 
-    .swiper-slide {
+    .ourSwiper .swiper-slide {
         background-position: center;
         background-size: cover;
         flex-shrink: inherit !important;
@@ -78,16 +78,16 @@
 }
 
 @media screen and (max-width: 862px){
-    .mySwiper {
+    .ourSwiper {
     }
 
-    .swiper {
+    .ourSwiper .swiper {
         width: 100%;
         padding-top: 50px;
         padding-bottom: 50px;
     }
 
-    .swiper-slide {
+    .ourSwiper .swiper-slide {
         background-position: center;
         background-size: cover;
         flex-shrink: inherit !important;
@@ -118,16 +118,16 @@
 }
 
 @media screen and (max-width: 700px){
-    .mySwiper {
+    .ourSwiper {
     }
 
-    .swiper {
+    .ourSwiper .swiper {
         width: 100%;
         padding-top: 50px;
         padding-bottom: 50px;
     }
 
-    .swiper-slide {
+    .ourSwiper .swiper-slide {
         background-position: center;
         background-size: cover;
         flex-shrink: inherit !important;
@@ -158,16 +158,16 @@
 }
 
 @media screen and (max-width: 500px){
-    .mySwiper {
+    .ourSwiper {
     }
 
-    .swiper {
+    .ourSwiper .swiper {
         width: 100%;
         padding-top: 50px;
         padding-bottom: 50px;
     }
 
-    .swiper-slide {
+    .ourSwiper .swiper-slide {
         background-position: center;
         background-size: cover;
         flex-shrink: inherit !important;
@@ -198,22 +198,22 @@
 }
 
 @media screen and (max-width: 390px){
-    .mySwiper {
+    .ourSwiper {
     }
 
-    .swiper {
+    .ourSwiper .swiper {
         width: 100%;
         padding-top: 50px;
         padding-bottom: 50px;
     }
 
-    .swiper-slide {
+    .ourSwiper .swiper-slide {
         background-position: center;
         background-size: cover;
         flex-shrink: inherit !important;
     }
 
-    .swiper-slide-visible {
+    .ourSwiper .swiper-slide-visible {
         filter: grayscale(100%);
         transform: translate3d(100px, 45px, -250px) rotateX(0deg) rotateY(0deg) rotateZ(-0.5deg) scale(0.7) !important;
     }
@@ -239,16 +239,16 @@
 
 
 @media screen and (max-width: 350px){
-    .mySwiper {
+    .ourSwiper {
     }
 
-    .swiper {
+    .ourSwiper .swiper {
         width: 100%;
         padding-top: 50px;
         padding-bottom: 50px;
     }
 
-    .swiper-slide {
+    .ourSwiper .swiper-slide {
         background-position: center;
         background-size: cover;
         flex-shrink: inherit !important;
