--- a/src/components/InstitutionPage/InstitutionFilm/InstitutionFilm.module.scss
+++ b/src/components/InstitutionPage/InstitutionFilm/InstitutionFilm.module.scss
@@ -1,3 +1,332 @@
-.institution__wrapper {
+.institution {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  position: relative;
 
+  .institution__wrapper_frame_one {
+    position: relative;
+    width: 630px;
+    transform: rotate(-2.02deg);
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: -50px;
+      left: -50px;
+      width: 104px;
+      height: 153px;
+      z-index: 10;
+      background-image: url('../../../assets/InstitutionPage/tape 1.png');
+      transform: rotate(130deg);
+      @media screen and (max-width: 1025px) {
+        content: '';
+        position: absolute;
+        bottom: -65px;
+        left: -80px;
+        width: 135px;
+        height: 140px;
+        background-repeat: no-repeat;
+      }
+      @media screen and (max-width: 769px) {
+        display: none;
+      }
+      @media screen and (max-width: 426px) {
+        display: block;
+        bottom: -95px;
+        left: 100px;
+        width: 100px;
+        height: 160px;
+        transform: rotate(70deg);
+      }
+    }
+    @media screen and (max-width: 1025px) {
+      width: 500px;
+    }
+    @media screen and (max-width: 769px) {
+      width: 400px;
+    }
+    @media screen and (max-width: 426px) {
+      width: 345px;
+      transform: rotate(2.02deg);
+    }
+  }
+
+
+
+  .institution__frame {
+    position: relative;
+    width: 100%;
+  }
+
+  .institution__bgr {
+    width: 47%;
+    height: 240px;
+    position: absolute;
+    left: 1.7%;
+    top: 13%;
+    opacity: 92%;
+    @media screen and (max-width: 1025px) {
+      width: 47%;
+      height: 190px;
+      position: absolute;
+      left: 1.7%;
+      top: 13%;
+      opacity: 92%;
+    }
+    @media screen and (max-width: 769px) {
+      height: 150px;
+      left: 1.7%;
+      top: 13%;
+    }
+    @media screen and (max-width: 426px) {
+      height: 130px;
+      left: 1.7%;
+      top: 13%;
+    }
+  }
+
+  .institution__bg {
+    width: 47%;
+    height: 240px;
+    position: absolute;
+    top: 13%;
+    right: 3.3%;
+    @media screen and (max-width: 1025px) {
+      width: 47%;
+      height: 190px;
+      position: absolute;
+      top: 13%;
+      right: 3.3%;
+    }
+    @media screen and (max-width: 769px) {
+      height: 150px;
+      top: 13%;
+      right: 3.3%;
+    }
+    @media screen and (max-width: 426px) {
+      height: 130px;
+      top: 13%;
+      right: 3.3%;
+    }
+  }
+
+  .institution__about {
+    position: absolute;
+    top: 22%;
+    left: 5%;
+    @media screen and (max-width: 769px) {
+      height: 141px;
+      top: 15%;
+      right: 3.3%;
+    }
+  }
+
+  .institution__about__title {
+    font-family: 'Mont', sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 26px;
+    color: #FFFFFF;
+    font-size: 20px;
+    margin-bottom: 33px;
+    @media screen and (max-width: 1025px) {
+      font-size: 14px;
+    }
+    @media screen and (max-width: 769px) {
+      font-family: 'Mont', sans-serif;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 26px;
+      color: #FFFFFF;
+      font-size: 10px;
+      margin-bottom: 33px;
+    }
+    @media screen and (max-width: 426px) {
+      font-size: 9px;
+    }
+    }
+
+  .institution__about__time {
+    display: flex;
+    gap: 7.4px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+    @media screen and (max-width: 1025px) {
+      font-size: 14px;
+      line-height: 18px;
+      img {
+        width: 15px;
+        height: 15px;
+      }
+    }
+    @media screen and (max-width: 769px) {
+      font-size: 10px;
+      line-height: 12px;
+      img {
+        width: 11px;
+        height: 11px;
+      }
+    }
+    @media screen and (max-width: 426px) {
+      font-size: 8px;
+      line-height: 12px;
+      img {
+        width: 9px;
+        height: 9px;
+      }
+    }
+  }
 }
+
+.institution__about__phone {
+  display: flex;
+  gap: 7.4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  margin: 15px 0;
+  @media screen and (max-width: 1025px) {
+    font-size: 14px;
+    line-height: 18px;
+    img {
+      width: 15px;
+      height: 15px;
+    }
+  }
+  @media screen and (max-width: 769px) {
+    font-size: 10px;
+    line-height: 12px;
+    img {
+      width: 11px;
+      height: 11px;
+    }
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 8px;
+    line-height: 12px;
+    img {
+      width: 9px;
+      height: 9px;
+    }
+  }
+}
+
+.institution__about__geotag {
+  display: flex;
+  gap: 7.4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  @media screen and (max-width: 1025px) {
+    font-size: 14px;
+    line-height: 18px;
+    img {
+      width: 15px;
+      height: 15px;
+    }
+  }
+  @media screen and (max-width: 769px) {
+    font-size: 10px;
+    line-height: 12px;
+    img {
+      width: 11px;
+      height: 11px;
+    }
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 8px;
+    line-height: 12px;
+    img {
+      width: 9px;
+      height: 9px;
+    }
+  }
+}
+
+.institution__wrapper_frame_two {
+  position: relative;
+  width: 511px;
+  //margin: 0 auto;
+  transform: rotate(2.02deg);
+  @media screen and (max-width: 1025px) {
+    width: 400px;
+  }
+  @media screen and (max-width: 769px) {
+    width: 350px;
+  }
+  @media screen and (max-width: 426px){
+    display: none;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 259px;
+    left: -65px;
+    width: 145px;
+    height: 153px;
+    z-index: 10;
+    background-image: url('../../../assets/InstitutionPage/tape 2.png');
+    background-repeat: no-repeat;
+    transform: rotate(280deg);
+    @media screen and (max-width: 1025px) {
+      content: '';
+      position: absolute;
+      bottom: 230px;
+      left: -80px;
+      width: 145px;
+      height: 110px;
+      z-index: 10;
+      background-image: url('../../../assets/InstitutionPage/tape 2.png');
+      background-repeat: no-repeat;
+    }
+    @media screen and (max-width: 769px) {
+      bottom: 200px;
+      left: -80px;
+      width: 140px;
+      height: 100px;
+    }
+    @media screen and (max-width: 426px){
+      bottom: 200px;
+      left: -80px;
+      width: 140px;
+      height: 100px;
+    }
+  }
+
+
+  .institution__frame_two {
+    position: relative;
+    width: 100%;
+  }
+
+  .institution__bg_two {
+    width: 94.2%;
+    height: 194px;
+    position: absolute;
+    left: 2.2%;
+    top: 13%;
+    opacity: 80%;
+    @media screen and (max-width: 1025px) {
+      width: 94.2%;
+      height: 152px;
+      position: absolute;
+      left: 2.2%;
+      top: 13%;
+    }
+    @media screen and (max-width: 769px) {
+      width: 94.2%;
+      height: 132px;
+      position: absolute;
+      left: 2.1%;
+      top: 13%;
+    }
+  }
+}
+
