--- a/src/components/Admin/SocialsInput/SocialsInput.module.scss
+++ b/src/components/Admin/SocialsInput/SocialsInput.module.scss
@@ -1,6 +1,17 @@
 .socialsInputs {
   width: 37.2%;
   margin-right: 12%;
+  position: relative;
+
+  & span {
+    position: absolute;
+    top: 22%;
+    left: 0;
+    height: 18px;
+    width: 100%;
+    font-size: 14px;
+    color: #ec5990;
+  }
 }
 
 .socialsInputsTitle {
