--- a/src/components/Admin/ContactsInputLink/ContactsInputLink.module.scss
+++ b/src/components/Admin/ContactsInputLink/ContactsInputLink.module.scss
@@ -2,6 +2,17 @@
   color: white;
   font-size: 22px;
   margin: 0;
+  position: relative;
+
+  & span {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 18px;
+    width: 100%;
+    font-size: 14px;
+    color: #ec5990;
+  }
 }
 
 .contactsInputLinkWrapper h4 {
