preparing for push

--- a/src/components/ui/calendar-button/CalendarButton.scss
+++ b/src/components/ui/calendar-button/CalendarButton.scss
@@ -22,6 +22,6 @@
      left: 0;
      width: 100px;
      height: 100px;
-     background: url('../../../../../retrobar_dev/src/assets/icons/calendar.svg') no-repeat;
+     background: url('../../../assets/icons/calendar.svg') no-repeat;
  }
 }
